--- a/ADCS.Infrastructure/ADCS.Infrastructure.csproj
+++ b/ADCS.Infrastructure/ADCS.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ADCS.Application\ADCS.Application.csproj" />
+  </ItemGroup>
+
 </Project>
